Fixed some weird clipping in the garden UI

--- a/apps/web-frontend/src/js/components/garden/garden.scss
+++ b/apps/web-frontend/src/js/components/garden/garden.scss
@@ -32,7 +32,6 @@
   grid-auto-rows: minmax(var(--rh), auto);
   grid-gap: var(--gutter);
   margin: var(--gutter);
-  overflow-x: hidden;
   @media (min-width: 60em) {
     margin: var(--gutter) auto;
   }
