--- a/apps/web-frontend/src/js/components/sort/sort.component.scss
+++ b/apps/web-frontend/src/js/components/sort/sort.component.scss
@@ -1,7 +1,6 @@
 @import "../../../sass/colors.scss";
 
 .sorters-selection {
-  margin-top: 0.7rem;
   display: flex;
   justify-content: space-between;
   text-align: center;
