--- a/apps/web-frontend/src/sass/main.scss
+++ b/apps/web-frontend/src/sass/main.scss
@@ -18,18 +18,17 @@ body {
 
 .container {
   @include base-container();
-  overflow: scroll;
-  height: 100vh;
+  overflow: auto;
+  flex-grow: 1;
+  flex-shrink: 1;
   max-width: 93.5rem;
-  padding-bottom: $footer-height;
-  padding-top: $header-height;
 }
 
 .container-single {
   @include base-container();
+  flex-grow: 1;
+  flex-shrink: 1;
   max-width: 93.5rem;
-  padding-bottom: $footer-height;
-  padding-top: $header-height;
 }
 
 .icon {
@@ -41,7 +40,7 @@ body {
 .icon-menu {
   margin-top: 0.6em;
   @extend .icon;
-  background:black;
+  background: black;
   -webkit-mask: url("../public/navicon-round.svg");
   mask: url("../public/navicon-round.svg");
   background-size: cover;
@@ -80,24 +79,32 @@ body .closed {
   text-align: center;
 }
 
-footer {
-  @include fixed-overlay();
+.main-container {
   @include base-container();
-  bottom: 0;
-  left: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+footer {
+  @include base-container();
+  width: 100vw;
   min-height: $footer-height;
+  flex-grow: 0;
+  flex-shrink: 0;
+
   border-top-width: 1px;
   border-top-color: $etimo-cyan;
   border-top-style: solid;
 }
 
 header {
-  @include fixed-overlay();
   @include base-container();
   z-index: 11;
-  top: 0;
-  left: 0;
+  width: 100vw;
   height: $header-height;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 
 button {
@@ -117,7 +124,6 @@ button {
   top: 4.2em;
   margin: 0 auto;
   z-index: 9;
-  max-width:100%;
-  max-height:100%;
-
+  max-width: 100%;
+  max-height: 100%;
 }
